second sonar fix